general refactor (#66)
Co-authored-by: USERSAD\evalenti <emanuele.valentini@nttdata.com>