@@ -11,7 +11,6 @@ import org.mapstruct.Mapping;
 import java.io.IOException;
 import java.security.NoSuchAlgorithmException;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Mapper(componentModel = "cdi")
 public abstract class WorkflowResourceMapper {
@@ -32,6 +31,6 @@ public abstract class WorkflowResourceMapper {
     public abstract WorkflowResourceDTO toDTO(WorkflowResource workflowResource);
 
     public List<WorkflowResourceDTO> toDTOList(List<WorkflowResource> list) {
-        return list.stream().map(this::toDTO).collect(Collectors.toList());
+        return list.stream().map(this::toDTO).toList();
     }
 }
